--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/styles.css">
     <title>My Portfolio</title>
 </head>
 
 <body>
-    <H1>
+    <H1 class="text">
         My Portfolio
     </H1>
+    <div>
+      <h1 class="text">Samuel McHargue</h1>
+      <h2 class="text">Software Developer</h2>
+      <hr>
+      <p class="text">My <i>favorite</i> thing about programming is that I can make whatever I want and it dosen't cost me anything because there are no physical materials!</p>
+      <img src="images/headshot.jpg" alt="This is an image of myself" class="images">
+      <h3 class="text">About Me</h3>
+      <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi in quasi harum autem quas minus tempora ratione repellendus. Deleniti molestiae ratione tempora eos! Minima, doloremque quo magni quos illum hic?</p>
+      <h3 class="text">My Projects</h3>
+      <ul class="text">
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+      <h3 class="text">Contact Me</h3>
+      <p class="text">Phone: (760) 760-7607</p>
+      <a href="mailto:fake@email.com">Email me here!</a>
+    </div>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
